javascript game of life 1.3

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -1,24 +1,9 @@
-<style>
-    .cell {
-        background: white;
-        width: 2rem;
-        height: 2rem;
-        border: solid 1px rgb(23, 131, 8);
-        border-color: red
-    }
-    .row {
-        display: flex;
-    }
-    .kvadratik {
-        display: flex;
-        flex-direction: column;
-        margin-top: 4.2rem;
-        margin-left: 4.2rem
-    }
-    .alive {
-        background: black;
-    }
-</style>
+<html>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" />
+</head>
 
 <body>
 </body>
@@ -28,3 +13,5 @@
 </script>
 
 <script src="./bundle.js"></script>
+
+</html>
